--- a/docker-compose.airflow.yaml
+++ b/docker-compose.airflow.yaml
@@ -48,6 +48,8 @@ x-airflow-common:
   build:
     context: .
     dockerfile: ./Dockerfile
+    args:
+      AIRFLOW_IMAGE_NAME: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.2.3}
   environment:
     &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: LocalExecutor
