feat: add scraping data dag

--- a/airflow.docker-compose.yaml
+++ b/airflow.docker-compose.yaml
@@ -83,6 +83,13 @@ services:
       retries: 5
     restart: always
 
+  selenium:
+    container_name: remote_chromedriver
+    image: seleniarm/standalone-chromium:latest
+    ports:
+      - 4444:4444
+    restart: always
+
   airflow-webserver:
     <<: *airflow-common
     command: webserver
