feat: update s3 bucket tasks

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 AIRFLOW_IMAGE_NAME=apache/airflow:slim-2.9.3
-AIRFLOW_UID=50000
+AIRFLOW_UID=1000
 _AIRFLOW_WWW_USER_USERNAME=airflow
 _AIRFLOW_WWW_USER_PASSWORD=airflow
+AWS_ACCESS_KEY_ID=YOUR_AWS_ACCESS_KEY_ID
+AWS_SECRET_ACCESS_KEY=YOUR_AWS_SECRET_ACCESS_KEY
+AWS_S3_BUCKET_NAME=YOUR_AWS_S3_BUCKET_NAME
