--- a/docker/airflow/requirements.txt
+++ b/docker/airflow/requirements.txt
@@ -1,7 +1,7 @@
 beautifulsoup4==4.12.3
 joblib==1.4.2
 matplotlib==3.9.1
-numpy==2.0.1
+numpy==1.26.4
 pandas==2.2.2
 pillow==10.4.0
 python-dotenv==1.0.1
@@ -20,3 +20,7 @@ pyarrow==7.0.0
 s3fs==2024.6.1
 aiobotocore==2.13.1
 botocore==1.34.131
+tensorboard==2.17.1
+tensorboard-data-server==0.7.2
+tensorflow==2.17.0
+tensorflow-io-gcs-filesystem==0.37.1
