docs: change architecture design

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,16 @@
 logs
 notebooks
 
+# MLflow
+mlruns/
+mlartifacts/
+outputs/
+mlruns.db
+**/basic_auth.db
+
+# Mac
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
